--- a/inlhtmlcss2/style.css
+++ b/inlhtmlcss2/style.css
@@ -32,7 +32,6 @@ a {
 
 }
 main {
-    display:flex;
     flex-wrap: wrap;
     width: 100%;
 }
@@ -62,6 +61,7 @@ h1 {
     text-align: center;
 }
 h2{
+    box-sizing: border-box;
     font-size: 60px;
 }
 .marg {
@@ -74,6 +74,7 @@ h2{
     align-items: center;
 }
 .half {
+    box-sizing: border-box;
     flex-basis: 30%;
     max-width: 50%;
     margin: 5%;
