--- a/inlhtmlcss2/style.css
+++ b/inlhtmlcss2/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     font-family:'Poppins', sans-serif;
-    font-size: 1.2em;
+    font-size: 1vw;
     max-width: 100%;
     background-color: rgb(233, 233, 233);
 }
@@ -12,33 +12,35 @@ body{
     background-color: rgb(233, 233, 233);
     margin: 0;
     font-weight: bold;
+    align-items: center;
 }
 .navbarhead ul {
     display:flex;
     list-style: none;
     width: 100%;
     justify-content: flex-end;
+    align-items: center;
+    padding-right: 1.5em;
 }
 .navbarhead li {
-    padding: 0.5em;
+    padding-right: 2vw;;
 }
 .logo{
     padding: 0.5em;
     font-weight: bold;
+    padding-left: 3vw;
 }
 a {
     text-decoration: none;
     color: inherit;
-
 }
 main {
-    flex-wrap: wrap;
     width: 100%;
 }
 .mainpic {
     box-sizing: border-box;
     background-image: url("https://via.placeholder.com/150");
-    min-height: 700px;
+    min-height: 50vh;
     width: 100%;
     flex-direction: column;
     display: flex;
@@ -53,7 +55,7 @@ main {
     font-weight: bold;
 }
 h1 {
-    font-size: 60px;
+    font-size: 4vw;
     margin: 0;
 }
 .fulline {
@@ -62,26 +64,30 @@ h1 {
 }
 h2{
     box-sizing: border-box;
-    font-size: 60px;
+    font-weight: bold;
+    font-size: 3vw;
 }
 .marg {
     margin: 5%;
 }
 .share {
+    box-sizing: border-box;
     display:flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    padding-top: 4vh;
 }
 .half {
     box-sizing: border-box;
     flex-basis: 30%;
     max-width: 50%;
-    margin: 5%;
+    padding-bottom: 4vh;
 }
 h3 {
-    font-size: 45px;
+    font-size: 2.5vw;
     text-align: center;
+    font-weight: bold;
 }
 p {
     text-align: center;
@@ -89,13 +95,13 @@ p {
 .flow {
     display:flex;
     flex-wrap: wrap;
-    padding: 10%;
+    padding: 5% 10% 10% 10%;
     justify-content: center;
     background-color:white;
 
 }
 .picflow {
-    margin: 15px;
+    margin: 1vw;
 }
 footer {
     display: flex;
@@ -103,10 +109,11 @@ footer {
 }
 .navbarfoot {
     display:flex;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(212, 209, 209);
     width: 100%;
     justify-content: center;
     flex-wrap: wrap;
+    padding-bottom: 3vh;
     
 }
 .navbarfoot ul {
@@ -117,9 +124,10 @@ footer {
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    margin-bottom: 3vh;
 }
 .navbarfoot li {
-    padding: 0.5em;
+    padding-right: 2vw;;
 }
 .footlogo {
     flex-basis: 100%;
@@ -127,10 +135,82 @@ footer {
     margin-top: 70px;
     font-weight: bold;
 }
-.imga {
+button {
+    padding: 0.5vh 3vw;
+    font-weight: bold;
+    font-family: inherit;
+    font-size: 1vw;
+    border: none;
+    background-color: rgb(199, 198, 198);
+}
+.share img {
+    width: 660px;
+    height: 400px;
     object-fit: cover;
 }
+.flow img {
+    width: 200px;
+    height: 200px;
+}
+.response {
+    max-width: 100%;
+    height: auto;
+}
 
+@media (max-width: 1000px){
+    main {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .half {
+        box-sizing: border-box;
+        flex-basis: 70%;
+        max-width: 70%;
+        margin: 5%;
+    }
+    .picflow {
+        flex-basis: 30%;
+        margin: 15px;
+    }
+    h1 {
+        font-size: 5vw;
+    }
+    h2 {
+        font-size: 4vw;
+    }
+    h3 {
+        font-size: 3vw;
+    }
+    p {
+        font-size: 2vw;
+    }
+    .navbarhead li {
+        padding: 0.5em;
+        font-size: 2vw;
+        
+    }
+    .navbarfoot li {
+        padding: 0.5em;
+        font-size: 2vw;
+    }
+    img {
+        order: 1;
+    }
+    .share img {
+        width: auto;
+        height: auto;
+    }
+    .flow img {
+        width: auto;
+        height: auto;
+    }
+    button {
+        font-size: 2vw;
+    }
 
-
-
+}
+@media (min-width: 1000px) {
+    .mainpic {
+        min-height: 80vh;
+    }
+}
