--- a/inlhtmlcss2/style.css
+++ b/inlhtmlcss2/style.css
@@ -106,7 +106,7 @@ p {
 .flow {
     display:flex;
     flex-wrap: wrap;
-    padding: 5% 10% 10% 10%;
+    padding: 5% 10% 5% 10%;
     justify-content: center;
     background-color:white;
 
@@ -123,6 +123,7 @@ footer {
     background-color: rgb(212, 209, 209);
     min-width: 100%;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     padding-bottom: 3vh;
     min-height: 248px ;
@@ -143,8 +144,9 @@ footer {
 .footlogo {
     flex-basis: 100%;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 3vh;
     font-weight: bold;
+
 }
 button {
     padding: 0.5vh 3vw;
@@ -166,6 +168,157 @@ button {
     max-width: 100%;
     height: auto;
 }
+.container {
+    display: grid;
+    grid-template-areas: 
+    "text picture picture picture"
+    "text picture picture picture";
+    grid-template-columns: 50% 1fr 1fr 1fr;
+    grid-auto-rows: auto;
+    grid-gap: 2em;
+    /* background: papayawhip; */
+    padding: 5% 10% 5% 10%;
+
+}
+.gridpic {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.text {
+    grid-area: text;
+    box-sizing: border-box;
+    text-align: start;
+    align-self: center;
+    padding: 0 9vw 0 1vw;;
+}
+.text p,
+.text h4 {
+    text-align: start;
+    padding: 0;
+}
+h4 {
+    font-size: 1.5vw;
+}
+.a {
+    grid-row: 1;
+    grid-column: 2;
+}
+.b {
+    grid-row: 1;
+    grid-column: 3;
+}
+.c {
+    grid-row: 1 / 3;
+    grid-column: 4 / 4;
+}   
+.d {
+    grid-row: 2 / 3;
+    grid-column: 2 / 4;
+}
+.container2 {
+    display: grid;
+    grid-template-areas: 
+    "picture inner-container"
+    "picture inner-container";
+    grid-template-columns: 45% 1fr;
+    grid-auto-rows: auto;
+    grid-gap: 7em;
+    background: white;
+    padding: 0;
+    justify-items: start;
+    align-items: start;
+    align-content: start;
+}
+.inner-container {
+    grid-area: inner-container;
+    display: grid;
+    height: 100%;
+    grid-template-areas: 
+    "first-text"
+    "second-text";
+    grid-template-rows: 45% 55%;
+    grid-gap: 2em;
+    padding: 5% 12% 5% 0;
+}
+.e {
+    grid-area: picture;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.first-text {
+    grid-area: first-text;
+    box-sizing: border-box;
+    text-align: start;
+    align-self: end;
+    padding: 0 9vw 0 1vw;;
+
+}
+.second-text {
+    grid-area: second-text;
+    box-sizing: border-box;
+    text-align: start;
+    /* align-self: start; */
+    padding: 0 9vw 0 1vw;;
+}
+.first-text p,
+.second-text p {
+    text-align: start;
+    padding: 0;
+}
+.container3 {
+    display: grid;
+    padding: 10% 5%;
+    grid-gap: 2em;
+    height: 70vh;
+    grid-template-areas: 
+    "f g overlap-text h i"
+    "f k overlap-text l i"
+    "j k overlap-text l m";
+    grid-template-columns: 1fr 1fr 30% 1fr 1fr;
+}
+.f {
+    grid-area: f;
+}
+.g {
+    grid-area: g;
+}
+.h {
+    grid-area: h;
+}
+.i {
+    grid-area: i;
+}
+.overlap-text {
+    grid-area: overlap-text;
+    align-self: center;
+    z-index: 1;
+    background: white;
+    padding: 3em 6em;
+    margin: 3em -6em;
+}
+.j {
+    grid-area: j;
+}
+.k {
+    grid-area: k;
+}
+.l {
+    grid-area: l;
+}
+.m {
+    grid-area: m;
+}
+.overlap-text h4,
+.overlap-text p {
+    box-sizing: border-box;
+    text-align: start;
+    padding: 0;
+}
+
+
 
 @media (max-width: 1000px){
     main {
@@ -191,6 +344,10 @@ button {
     h3 {
         font-size: 3vw;
     }
+    h4 {
+        font-size: 2vw;
+    }    
+
     p {
         font-size: 2vw;
     }
@@ -217,7 +374,6 @@ button {
     button {
         font-size: 2vw;
     }
-
 }
 @media (min-width: 1000px) {
     .mainpic {
