Fortsatt göra responsivt
Artikellistan är fortfarnde inte mobil first

--- a/inlhtmlcss2/styles/_article-with-overlap.scss
+++ b/inlhtmlcss2/styles/_article-with-overlap.scss
@@ -10,16 +10,16 @@
     /* grid-template-rows: repeat(3, minmax(10em, 1fr)); */
     
 } 
-.f {
+.overlap-article-img1 {
     grid-area: f;
 }
-.g {
+.overlap-article-img2 {
     grid-area: g;
 }
-.h {
+.overlap-article-img3 {
     grid-area: h;
 }
-.i {
+.overlap-article-img4 {
     grid-area: i;
 }
 .overlap-text {
@@ -30,16 +30,16 @@
     padding: 3em 6em;
     margin: 3em -6em;
 }
-.j {
+.overlap-article-img5 {
     grid-area: j;
 }
-.k {
+.overlap-article-img6 {
     grid-area: k;
 }
-.l {
+.overlap-article-img7 {
     grid-area: l;
 }
-.m {
+.overlap-article-img8 {
     grid-area: m;
 }
 .overlap-text h4,
