--- a/inlhtmlcss2/styles/style.scss
+++ b/inlhtmlcss2/styles/style.scss
@@ -4,6 +4,6 @@
 @import "article-list";
 @import "flow-of-pictures";
 @import "article-collage";
-@import "news-about-uss";
+@import "news-about-us";
 @import "article-with-overlap";
 @import "footer";
