--- a/inlhtmlcss2/styles/_article-collage.scss
+++ b/inlhtmlcss2/styles/_article-collage.scss
@@ -1,13 +1,16 @@
 .article-collage {
-    display: grid;
-    grid-template-areas: 
-    "text picture picture picture"
-    "text picture picture picture";
-    grid-template-columns: 50% 1fr 1fr 1fr;
-    grid-auto-rows: auto;
-    grid-gap: 2em;
-    padding: 5% 10% 5% 10%;
-    min-height: 25em;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10% 5% 10% 10%;
+    justify-content: center;
+    min-height: 20em;
+    @media (min-width: 750px) {
+        flex-wrap: nowrap;
+        padding: 5% 10% 5% 10%;
+    }
+    @media (min-width: 1500px) {
+        min-height: 25em;
+    }
 }
 .collage-text {
     grid-area: text;
@@ -15,25 +18,58 @@
     text-align: start;
     align-self: center;
     padding: 0 9vw 0 1vw;;
+    width: 100%;
+    @media (min-width: 750px) {
+        width: 50%;
+    }
+    h4 {
+        font-size: 1.5em;
+        margin-top: 0;
+    @media (min-width: 1000px) {
+        h4 {
+            font-size: 2vw;
+        }
+    }
+}
 }
 .collage-text p,
 .collage-text h4 {
     text-align: start;
     padding: 0;
+   
+}
+.collage-pictures {
+    display: grid;
+    grid-template-columns: 1fr 1fr auto;
+    grid-auto-rows: auto;
+    grid-gap: 1.5em;
+    width: 100%;
+    @media (min-width: 750px) {
+        width: 50%;
+    }
+    @media (min-width: 1000px) {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    
 }
 .collage-img1 {
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 1;
+
 }
 .collage-img2 {
     grid-row: 1;
-    grid-column: 3;
+    grid-column: 2;
 }
 .collage-img3 {
     grid-row: 1 / 3;
-    grid-column: 4 / 4;
+    grid-column: 3 / 3;
+    display: none;
+    @media (min-width: 1000px) {
+        display: unset;
+    }
 }   
 .collage-img4 {
     grid-row: 2 / 3;
-    grid-column: 2 / 4;
+    grid-column: 1 / 3;
 }
