--- a/inlhtmlcss2/styles/style.css
+++ b/inlhtmlcss2/styles/style.css
@@ -363,21 +363,33 @@ div.half {
 }
 
 .article-collage {
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "text picture picture picture" "text picture picture picture";
-  -ms-grid-columns: 50% 1fr 1fr 1fr;
-      grid-template-columns: 50% 1fr 1fr 1fr;
-  grid-auto-rows: auto;
-  grid-gap: 2em;
-  padding: 5% 10% 5% 10%;
-  min-height: 25em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 10% 5% 10% 10%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 20em;
+}
+
+@media (min-width: 750px) {
+  .article-collage {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    padding: 5% 10% 5% 10%;
+  }
+}
+
+@media (min-width: 1500px) {
+  .article-collage {
+    min-height: 25em;
+  }
 }
 
 .collage-text {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
   grid-area: text;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -386,6 +398,24 @@ div.half {
       -ms-grid-row-align: center;
       align-self: center;
   padding: 0 9vw 0 1vw;
+  width: 100%;
+}
+
+@media (min-width: 750px) {
+  .collage-text {
+    width: 50%;
+  }
+}
+
+.collage-text h4 {
+  font-size: 1.5em;
+  margin-top: 0;
+}
+
+@media (min-width: 1000px) {
+  .collage-text h4 h4 {
+    font-size: 2vw;
+  }
 }
 
 .collage-text p,
@@ -394,97 +424,191 @@ div.half {
   padding: 0;
 }
 
+.collage-pictures {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr auto;
+      grid-template-columns: 1fr 1fr auto;
+  grid-auto-rows: auto;
+  grid-gap: 1.5em;
+  width: 100%;
+}
+
+@media (min-width: 750px) {
+  .collage-pictures {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .collage-pictures {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
 .collage-img1 {
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+.collage-img2 {
   -ms-grid-row: 1;
   grid-row: 1;
   -ms-grid-column: 2;
   grid-column: 2;
 }
 
-.collage-img2 {
-  -ms-grid-row: 1;
-  grid-row: 1;
-  -ms-grid-column: 3;
-  grid-column: 3;
-}
-
 .collage-img3 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
-  -ms-grid-column: 4;
-  grid-column: 4 / 4;
+  -ms-grid-column: 3;
+  grid-column: 3 / 3;
+  display: none;
+}
+
+@media (min-width: 1000px) {
+  .collage-img3 {
+    display: unset;
+  }
 }
 
 .collage-img4 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
-  -ms-grid-column: 2;
+  -ms-grid-column: 1;
   -ms-grid-column-span: 2;
-  grid-column: 2 / 4;
+  grid-column: 1 / 3;
 }
 
 .newsAboutUs {
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "picture inner-container" "picture inner-container";
-  -ms-grid-columns: 45% 1fr;
-      grid-template-columns: 45% 1fr;
-  grid-auto-rows: auto;
-  grid-gap: 7em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 850px;
   background: white;
   padding: 0;
-  justify-items: start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -ms-flex-line-pack: start;
-      align-content: start;
+}
+
+@media (min-width: 900px) {
+  .newsAboutUs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "picture inner-container" "picture inner-container";
+    -ms-grid-columns: 45% 1fr;
+        grid-template-columns: 45% 1fr;
+    grid-auto-rows: auto;
+    justify-items: start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -ms-flex-line-pack: start;
+        align-content: start;
+    grid-gap: 7em;
+    height: 100%;
+  }
 }
 
 .inner-container-news {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 2;
-  grid-area: inner-container;
-  display: -ms-grid;
-  display: grid;
-  height: 100%;
-      grid-template-areas: "first-text" "second-text";
-  -ms-grid-rows: 45% 55%;
-      grid-template-rows: 45% 55%;
-  grid-gap: 2em;
   padding: 5% 12% 5% 0;
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+}
+
+@media (min-width: 900px) {
+  .inner-container-news {
+    grid-area: inner-container;
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "first-text" "second-text";
+    -ms-grid-rows: 45% 55%;
+        grid-template-rows: 45% 55%;
+    grid-gap: 2em;
+  }
+}
+
+.inner-container-news h4 {
+  font-size: 1.5em;
+  margin-top: 0;
+}
+
+@media (min-width: 900px) {
+  .inner-container-news h4 h4 {
+    font-size: 2vw;
+  }
+}
+
+.newspicWrapper {
+  grid-area: picture;
+  position: relative;
+  height: 45%;
+  width: 100%;
+}
+
+@media (min-width: 500px) {
+  .newspicWrapper {
+    height: 50%;
+  }
+}
+
+@media (min-width: 600px) {
+  .newspicWrapper {
+    height: 55%;
+  }
+}
+
+@media (min-width: 750px) {
+  .newspicWrapper {
+    height: 65%;
+  }
+}
+
+@media (min-width: 900px) {
+  .newspicWrapper {
+    height: 100%;
+  }
 }
 
 .newsPic {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  grid-area: picture;
+  display: block;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 100%;
   height: 100%;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
 }
 
 .first-news-text {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
   grid-area: first-text;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: start;
-  -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   padding: 0 9vw 0 1vw;
 }
 
+@media (min-width: 900px) {
+  .first-news-text {
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+  }
+}
+
 .second-news-text {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
   grid-area: second-text;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -509,26 +633,26 @@ div.half {
   /* grid-template-rows: repeat(3, minmax(10em, 1fr)); */
 }
 
-.f {
+.overlap-article-img1 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: f;
 }
 
-.g {
+.overlap-article-img2 {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   grid-area: g;
 }
 
-.h {
+.overlap-article-img3 {
   -ms-grid-row: 1;
   -ms-grid-column: 4;
   grid-area: h;
 }
 
-.i {
+.overlap-article-img4 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 5;
@@ -549,27 +673,27 @@ div.half {
   margin: 3em -6em;
 }
 
-.j {
+.overlap-article-img5 {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: j;
 }
 
-.k {
+.overlap-article-img6 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
   -ms-grid-column: 2;
   grid-area: k;
 }
 
-.l {
+.overlap-article-img7 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
   -ms-grid-column: 4;
   grid-area: l;
 }
 
-.m {
+.overlap-article-img8 {
   -ms-grid-row: 3;
   -ms-grid-column: 5;
   grid-area: m;
