--- a/inlhtmlcss2/styles/_article-with-overlap.scss
+++ b/inlhtmlcss2/styles/_article-with-overlap.scss
@@ -8,10 +8,28 @@
     "j k overlap-text l m";
     grid-template-columns: 1fr 1fr 30% 1fr 1fr;
     /* grid-template-rows: repeat(3, minmax(10em, 1fr)); */
-    
+    @media (max-width: 1000px){
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
 } 
+.overlappicWrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+  }
+.position {
+    display: block;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+  }
+
 .overlap-article-img1 {
     grid-area: f;
+
 }
 .overlap-article-img2 {
     grid-area: g;
@@ -28,7 +46,10 @@
     z-index: 1;
     background: white;
     padding: 3em 6em;
-    margin: 3em -6em;
+    margin: 3em -10em;
+    @media (max-width: 1000px) {
+        margin: 3em -15em;
+    }
 }
 .overlap-article-img5 {
     grid-area: j;
