--- a/inlhtmlcss2/styles/style.css
+++ b/inlhtmlcss2/styles/style.css
@@ -633,6 +633,30 @@ div.half {
   /* grid-template-rows: repeat(3, minmax(10em, 1fr)); */
 }
 
+@media (max-width: 1000px) {
+  .article-with-overlap {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
+.overlappicWrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.position {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+}
+
 .overlap-article-img1 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
@@ -670,7 +694,13 @@ div.half {
   z-index: 1;
   background: white;
   padding: 3em 6em;
-  margin: 3em -6em;
+  margin: 3em -10em;
+}
+
+@media (max-width: 1000px) {
+  .overlap-text {
+    margin: 3em -15em;
+  }
 }
 
 .overlap-article-img5 {
